# sphinx-better-subsection

./: .gitignore  LICENSE  README.md  README.rst  hatch.toml  index.html  pyproject.toml  searchindex.js  sphinx_better_subsection.py
.github/workflows/: docs.yaml
_generated/CHANGELOG/: index.html
_generated/api/sphinx_better_subsection/: index.html
_modules/: index.html
_modules/sphinx_better_subsection/: index.html
_sources/: index.rst.txt
_sources/_generated/: CHANGELOG.rst.txt
_sources/_generated/api/: sphinx_better_subsection.rst.txt
_static/: basic.css  documentation_options.js
api/: index.html
docs/: api.rst  conf.py  gitchangelog_conf.py
docs/_static/: custom.css
docs/_templates/: layout.html
docs/_templates/autosummary/: module.rst
docs/_templates/gitchangelog/: CHANGELOG.rst
genindex/: index.html
py-modindex/: index.html
search/: index.html
